src/components/Sidebar/ProductsSidebar.css
.ProductsSidebar-add,
.ProductsSidebar-add--stock,
.ProductsSidebar-img,
.ProductSidebar-details,
.ProductSidebar-upload {
  padding: 1em;
}

.ProductsSidebar-img {
  padding-top: 1em;
}

.ProductsSidebar-add {
  padding-top: 1em;
}

.ProductsSidebar-add .hC5Z2._2Agdx._2CPs4 {
  display: inline-block;
  margin: .25em;
}

.hC5Z2.ProductsSidebar-add--color.ProductsSidebar-add--color {
  color: white;
}

.ProductsSidebar-add--colors {
  margin-bottom: 1em;
}

.ProductsSidebar-add-attributes--card {
  margin-bottom: .5em;
  padding: .5em;
}

.ProductsSidebar-add-attributes--card-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.ProductsSidebar-add-attributes--card-heading h4{
  margin: 0;
}

.ProductsSidebar-add-attributes--card .ZoLIG {
  margin-left: auto;
}

.ProductsSidebar-add-attributes--table>thead>tr>.gfcPv {
  font-weight: 600;
  color: #2e2e2e;
  vertical-align: top;
}
.ProductsSidebar-add-attributes--headerhint {
  margin: -0.5rem 0px 0px;
  color: grey;
  font-weight: 300;
  font-size: 11px;
}
.ProductsSidebar-add-attributes--table>thead>tr>._2yhwA {
  visibility: hidden;
}
.ProductsSidebar-add-attributes--table>thead>tr>._2yhwA>._2jVLS>._1CXAo {
  border-color: #2e2e2e;
}
.ProductsSidebar-add-attributes--table tr {
  width: 100%;
}
.ProductsSidebar-add-attributes--table tr th,
.ProductsSidebar-add-attributes--table tr td {
  width: calc(100% / 4);
  text-align: center;
  padding: 12px 10px 12px 10px;
}
.ProductsSidebar-add-attributes--table tr th._18bqN:first-of-type, .gfcPv:first-of-type,
.ProductsSidebar-add-attributes--table tr td._18bqN:first-of-type, .gfcPv:first-of-type {
  padding-left: 12px;
}
.ProductsSidebar-add-attributes--table tr th._18bqN:last-of-type, .gfcPv:last-of-type,
.ProductsSidebar-add-attributes--table tr td._18bqN:last-of-type, .gfcPv:last-of-type {
  padding-right: 12px;
  text-align: center;
}

.ProductsSidebar-add--products,
.ProductsSidebar-add--stock,
.ProductsSidebar-img,
.ProductSidebar-details,
.ProductSidebar-upload {
  display: flex;
  flex-direction: column;
}

.ProductsSidebar-add-actions {
  margin-left: auto;
  margin-top: 1em;
}

.ProductsSidebar-add .ProductsSidebar-add--color,
.ProductSidebar-details--variance .ProductsSidebar-add--color{
  box-shadow: var(--shadow-6p);
}

.ProductSidebar-details--variance-btn {
  position: relative;
  cursor: pointer;
}

.ProductsSidebar-img-dropzone {
  height: 5rem;
  width:  4rem;
  margin: .5em;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border: #ccc dotted;
  color: #ccc;
}

.ProductsSidebar-img-variants--title {
  display: flex;
  align-items: center;
}

.ProductsSidebar-img-variants--title h4 {
  margin-left: .5em;
}

.ProductsSidebar-img-variants--content {
  display: flex;
  flex-wrap: wrap;
}

.ProductsSidebar-img-variants--content-img {
  background-size: contain;
  background-repeat: no-repeat;
  height: 5em;
  width: 5em;
  margin: 0.5em;
  position: relative;
}
.ProductsSidebar-img-variants--content-del-btn {
  position: absolute;
  right: -12px;
  top: -12px;
  transform: rotate(45deg);
  background-color: white;
  color: #ee1432;
  border-radius: 50%;
  cursor: pointer;
}

.ProductsSidebar-add .lFVgC {
  padding-bottom: 0;
}

.ProductsSidebar-add--radio {
  display: flex;
  justify-content: space-around;
}

.ProductsSidebar-img h3 {
  margin: 0;
}

.ProductSidebar-details--images * {
  min-height: 0;
  min-width: 0;
}

.ProductSidebar-details--images {
  margin: 0 auto;
  background: white;
  height: 30vh;
  width: 80%;

}

.ProductSidebar-details--images img {
  height: 30vh;
  width: 100%;
  object-fit: contain;
  background-color: white;
}
.ProductSidebar-details--variance {
  margin-top: 1em;
  padding: 1em;
  display: flex;
  justify-content: center;
  width: 100%;
}

.ProductsSidebar-add-attributes--stock>.lFVgC {
  padding-top: 0px;
  text-align: center;
}
.ProductsSidebar-add-attributes--stock>.lFVgC>input {
  text-align: center;
}

.ProductSidebar-add-product.ProductSidebar-add-product--active,
.ProductSidebar-add-service.ProductSidebar-add-service--active {
    border-bottom: 2px solid rgb(71, 84, 144);
}

.ProductsSidebar-add--products .material-icons,
.ProductSidebar-details .material-icons {
  font-size: 14px;
}

.ProductsSidebar-add--products--info {
  font-size: 12px;
  padding-left: .5em;
  display: none;
}

.ProductsSidebar-add--products--info.ProductsSidebar-add--products--info--show {
  display: block;
}

.ProductsSidebar-add--products--info ul,
.ProductsSidebar-add--products--info p,
.ProductSidebar-details--commission {
  margin: 0;
}
.ProductSidebar-details--commission {
  font-size: 0.8rem;
}
.ProductSidebar-details--commission>button {
  position: relative;
  top: -2px;
}
.ProductsSidebar-add--products--info p {
  margin-bottom: .5em;
}

